# loomal-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
loomal/: __init__.py  _errors.py  _http.py  client.py  platform_client.py  supervisor_client.py  types.py  webhook.py
loomal/paywall/: __init__.py  _core.py  fastapi.py
loomal/resources/: calendar.py  did.py  identity.py  logs.py  mail.py  payments.py  platform_identities.py  supervisor_identities.py  vault.py
mailgent/: __init__.py  supervisor_client.py  types.py
mailgent/resources/: supervisor_identities.py
tests/: test_calendar.py  test_client.py  test_http.py  test_mail_rules.py  test_payments.py  test_platform.py  test_supervisor.py  test_types.py  test_vault.py  test_webhook.py
