[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loomal"
version = "0.2.0"
description = "Official Python SDK for the Loomal API — identity infrastructure for AI agents"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
license = "MIT"
keywords = ["loomal", "ai", "agent", "email", "mcp", "did", "vault", "sdk"]

[project.urls]
Homepage = "https://loomal.ai"
Documentation = "https://docs.loomal.ai"
Repository = "https://github.com/loomal-ai/loomal-python"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
